; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/unarr/rar/extr_uncompress-rar.c_Range_GetThreshold.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/unarr/rar/extr_uncompress-rar.c_Range_GetThreshold.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.CPpmdRAR_RangeDec = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32)* @Range_GetThreshold to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @Range_GetThreshold(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.CPpmdRAR_RangeDec*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.CPpmdRAR_RangeDec*
  store %struct.CPpmdRAR_RangeDec* %7, %struct.CPpmdRAR_RangeDec** %5, align 8
  %8 = load %struct.CPpmdRAR_RangeDec*, %struct.CPpmdRAR_RangeDec** %5, align 8
  %9 = getelementptr inbounds %struct.CPpmdRAR_RangeDec, %struct.CPpmdRAR_RangeDec* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* %4, align 4
  %12 = load %struct.CPpmdRAR_RangeDec*, %struct.CPpmdRAR_RangeDec** %5, align 8
  %13 = getelementptr inbounds %struct.CPpmdRAR_RangeDec, %struct.CPpmdRAR_RangeDec* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = sdiv i32 %14, %11
  store i32 %15, i32* %13, align 4
  %16 = sdiv i32 %10, %15
  ret i32 %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
